hotfix(mds-input-switch): fix vertical align and include icons

--- a/projects/stencil/src/components/mds-input-switch/mds-input-switch.css
+++ b/projects/stencil/src/components/mds-input-switch/mds-input-switch.css
@@ -85,10 +85,13 @@
 }
 
 .label-text {
-  align-items: center;
-  align-self: center;
   cursor: pointer;
   display: flex;
+}
+
+:host([type="switch"]) .label-text {
+  align-items: center;
+  align-self: center;
 }
 
 .icon-explicit {
